cmake_minimum_required(VERSION 3.17)
project(libft C)

set(CMAKE_C_STANDARD 99)

add_executable(libft main.c ft_strlcat.c ft_split.c ft_strtrim.c ft_substr.c ft_strchr.c ft_strdup.c ft_strnstr.c ft_strmapi.c ft_itoa.c ft_atoi.c ft_strnstr.c ft_strjoin.c ft_memcmp.c ft_strncmp.c ft_memcmp.c ft_memchr.c ft_strlen.c ft_isprint.c ft_isprint.c ft_strlcpy.c ft_putnbr_fd.c ft_putchar_fd.c ft_putstr_fd.c ft_memccpy.c  ft_memmove.c)